# cpp-skeleton

./: CMakeLists.txt
ext/gtest/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
test/: test1.cpp
